test/compile-errors/builtin-does-not-exist.crow
main void()
	()

x builtin

x builtin-spec

# There are '==' builtins but not with this signature
== string(a nat, b int) builtin
